# startle-bot

./: README.md
src/: startle-server.sh
src/startle_control/: CMakeLists.txt  package.xml
src/startle_control/launch/: startle_control.launch
src/startle_description/: CMakeLists.txt  package.xml
src/startle_description/launch/includes/: description.launch.xml
src/startle_description/urdf/: startle.gazebo.xacro  startle.urdf.xacro
src/startle_gazebo/: CMakeLists.txt  package.xml
src/startle_gazebo/launch/: startle_world.launch
src/startle_navigation/: CMakeLists.txt  package.xml
src/startle_navigation/launch/: move_base.launch  startle_navigation.launch  startle_remote.launch
src/startle_navigation/rviz/: startle_navigation.rviz
src/startle_navigation/src/: go-to-goal.py
